@@ -1063,7 +1063,7 @@
 #ifdef APSTUDIO_INVOKED
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        626
-#define _APS_NEXT_COMMAND_VALUE         4012
+#define _APS_NEXT_COMMAND_VALUE         4016
 #define _APS_NEXT_CONTROL_VALUE         793
 #define _APS_NEXT_SYMED_VALUE           188
 #endif
